--- a/_posts/optimizer/2019-8-1-PQO.md
+++ b/_posts/optimizer/2019-8-1-PQO.md
@@ -1,4 +1,9 @@
-# Parametric Query Optimization
+---
+layout: post
+title:  "Parametric Query Optimization"
+date:   2019-8-22 11:08:57 +0800
+categories: optimizer
+---
 ## 背景
 ### PQO
 在 OLTP 系统中，SQL 语句常常有特定的 SQL 模板。对于具有相同 SQL 模板的 SQL 语句，SQL 引擎可以先将 SQL 参数化为 SQL 模板，然后复用中间结果。<br>
